# pash

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Credits.md  Design.md  MANIFEST.in  Makefile  README.md  links.md  pyproject.toml  tasks.py
.github/actions/pkg-install/: action.yml
.github/workflows/: CI.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  lib_test.rs  shell.rs
crates/cmdgroup/: Cargo.toml
crates/cmdgroup/src/shell/: command.rs
crates/cmdgroup/src/shell/commands/: args.rs
crates/py_ast/: Cargo.toml
crates/py_ast/src/to_ast/: stmt.rs
crates/ruff_python_ast/: Cargo.toml
crates/ruff_python_ast/src/: helpers.rs  node.rs  nodes.rs
crates/ruff_python_parser/: Cargo.toml
crates/ruff_python_parser/src/: error.rs  lexer.rs  string.rs  token_source.rs  typing.rs
crates/ruff_python_parser/src/parser/: combinators.rs  expression.rs  mod.rs  pattern.rs  recovery.rs  statement.rs  subproc.rs
oxipy/: __init__.py  __main__.py  _oxipy.pyi
src/: lexer.rs  lib.rs  parser.rs
tests/: bench.py  bench_mem.py  conftest.py  test_cli.py  test_proc_toks.py
tests/cli/: conftest.py  test_main.py
tests/completers/: test_xompletions.py
tests/data/: exprs.yml  stmts.yml
tests/history/: test_history_json.py
tests/parser/: test_lexer.py  test_proc_toks.py  test_py_syntax.py  test_redirects.py  test_xsh_syntax.py
tests/prompt/: test_vc.py
xonsh/: aliases.py  environ.py  main.py  parser.py
xonsh/completers/: bash_completion.py  tools.py
xonsh/history/: sqlite.py
xonsh/parsers/: completion_context.py
xonsh/procs/: jobs.py  pipelines.py
