[package]
name = "oxipy-cli"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "*", features = ["derive", "cargo", "wrap_help"] }
clap-verbosity-flag = "*"
serde = { workspace = true, features = ["derive"] }
env_logger = "*"
log = "*"
rustyline = {version = "*", features = ["derive", "with-fuzzy", "case_insensitive_history_search", "custom-bindings"]}
dirs = "*"
anyhow = {workspace = true}

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

[lints]
workspace = true

[dev-dependencies]
insta = {workspace = true, features = ["yaml"]}
